--- a/.env
+++ b/.env
@@ -35,7 +35,9 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+# FILESYSTEM_DISK=local
+FILESYSTEM_DISK=public
+
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
